grpc get product & upload s3